Remove workaround for illegal-access warnings